--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,13 +2,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.projectassignment">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.ProjectAssignment">
+        android:theme="@style/Theme.ProjectAssignment"
+        android:usesCleartextTraffic="true">
         <activity android:name=".RecipeListActivity"></activity>
         <activity android:name=".RecipeSearchActivity" />
         <activity android:name=".MainActivity">
