--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ProjectAssignment">
-        <activity android:name=".AlbumFragmentEmpty"></activity>
+        <activity android:name=".SavedAlbums"></activity>
+        <activity android:name=".AlbumFragmentEmpty" />
         <activity android:name=".AUDIO_DATABASE_API" />
         <activity android:name=".MainActivity">
             <intent-filter>
