--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ProjectAssignment">
         <activity android:name=".EventFragment"></activity>
-        <activity android:name=".emptyFragmentEvent" />
+        <activity android:name=".DetailActivity" />
         <activity android:name=".TicketMasterEventSearch" />
         <activity android:name=".MainActivity">
             <intent-filter>
